[lworld] runtime/classFileParserBug/NameAndTypeSig.java fails with Wrong ClassFormatError exception: Method "<init>" in class nonVoidInitSigCFE (an inline class) has illegal signature "()D"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • None
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      Test runtime/classFileParserBug/NameAndTypeSig.java fails with following output:

      #section:main
      ----------messages:(6/267)----------
      command: main -Xverify:remote NameAndTypeSig
      reason: User specified action: run main/othervm -Xverify:remote NameAndTypeSig
      started: Thu Mar 21 13:52:29 UTC 2024
      Mode: othervm [/othervm specified]
      finished: Thu Mar 21 13:52:29 UTC 2024
      elapsed time (seconds): 0.406
      ----------configuration:(0/0)----------
      ----------System.out:(0/0)----------
      ----------System.err:(11/922)----------
      java.lang.RuntimeException: Wrong ClassFormatError exception: Method "<init>" in class nonVoidInitSigCFE (an inline class) has illegal signature "()D"
      at NameAndTypeSig.main(NameAndTypeSig.java:51)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
      at java.base/java.lang.reflect.Method.invoke(Method.java:580)
      at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
      at java.base/java.lang.Thread.run(Thread.java:1570)

      JavaTest Message: Test threw exception: java.lang.RuntimeException: Wrong ClassFormatError exception: Method "<init>" in class nonVoidInitSigCFE (an inline class) has illegal signature "()D"
      JavaTest Message: shutting down test

      STATUS:Failed.`main' threw exception: java.lang.RuntimeException: Wrong ClassFormatError exception: Method "<init>" in class nonVoidInitSigCFE (an inline class) has illegal signature "()D"
      ----------rerun:(34/6066)*----------
      cd testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/scratch/3 && \\
      HOME=/tmp/sparky-temp-home-8307473366241573791/user_home \\
      JIB_DATA_DIR=/opt/mach5/mesos/work_dir/jib-master \\
      JIB_HOME=/opt/mach5/mesos/work_dir/jib-master/install/com/oracle/java/jib/jib/3.0-SNAPSHOT/jib-3.0-20240313.170611-526-distribution.zip/jib-3.0-SNAPSHOT-distribution \\
      JTREG_KEYWORDS="!headful" \\
      JTREG_VERBOSE=fail,error,time \\
      LC_ALL=C \\
      PATH=/bin:/usr/bin:/usr/sbin \\
      TEST_IMAGE_DIR=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/linux-x64-debug.test \\
      _JVM_DWARF_PATH=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/linux-x64-debug.jdk_symbols/jdk-22/fastdebug \\
      CLASSPATH=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S10062/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7229ede7-798b-422c-9f0e-d541fff3a36b/runs/d2a349ae-0be7-487b-a9d5-60af052090dd/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/3/runtime/classFileParserBug/NameAndTypeSig.d:/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/src.full/open/test/hotspot/jtreg/runtime/classFileParserBug:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/7.3.1/1/bundles/jtreg-7.3.1+1.zip/jtreg/lib/jtreg.jar \\
          /opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/linux-x64-debug.jdk/jdk-22/fastdebug/bin/java \\
              -Dtest.vm.opts='-XX:MaxRAMPercentage=4.16667 -Dtest.boot.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk/21/35/bundles/linux-x64/jdk-21_linux-x64_bin.tar.gz/jdk-21 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S10062/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7229ede7-798b-422c-9f0e-d541fff3a36b/runs/d2a349ae-0be7-487b-a9d5-60af052090dd/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/tmp' \\
              -Dtest.tool.vm.opts='-J-XX:MaxRAMPercentage=4.16667 -J-Dtest.boot.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk/21/35/bundles/linux-x64/jdk-21_linux-x64_bin.tar.gz/jdk-21 -J-Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S10062/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7229ede7-798b-422c-9f0e-d541fff3a36b/runs/d2a349ae-0be7-487b-a9d5-60af052090dd/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/tmp' \\
              -Dtest.compiler.opts= \\
              -Dtest.java.opts= \\
              -Dtest.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/linux-x64-debug.jdk/jdk-22/fastdebug \\
              -Dcompile.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/linux-x64-debug.jdk/jdk-22/fastdebug \\
              -Dtest.timeout.factor=4.0 \\
              -Dtest.nativepath=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/linux-x64-debug.test/hotspot/jtreg/native \\
              -Dtest.root=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/src.full/open/test/hotspot/jtreg \\
              -Dtest.name=runtime/classFileParserBug/NameAndTypeSig.java \\
              -Dtest.file=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/src.full/open/test/hotspot/jtreg/runtime/classFileParserBug/NameAndTypeSig.java \\
              -Dtest.src=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/src.full/open/test/hotspot/jtreg/runtime/classFileParserBug \\
              -Dtest.src.path=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/src.full/open/test/hotspot/jtreg/runtime/classFileParserBug \\
              -Dtest.classes=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S10062/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7229ede7-798b-422c-9f0e-d541fff3a36b/runs/d2a349ae-0be7-487b-a9d5-60af052090dd/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/3/runtime/classFileParserBug/NameAndTypeSig.d \\
              -Dtest.class.path=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S10062/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7229ede7-798b-422c-9f0e-d541fff3a36b/runs/d2a349ae-0be7-487b-a9d5-60af052090dd/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/3/runtime/classFileParserBug/NameAndTypeSig.d \\
              -Dtest.class.path.prefix=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S10062/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7229ede7-798b-422c-9f0e-d541fff3a36b/runs/d2a349ae-0be7-487b-a9d5-60af052090dd/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/3/runtime/classFileParserBug/NameAndTypeSig.d:/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/src.full/open/test/hotspot/jtreg/runtime/classFileParserBug \\
              -XX:MaxRAMPercentage=4.16667 \\
              -Dtest.boot.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk/21/35/bundles/linux-x64/jdk-21_linux-x64_bin.tar.gz/jdk-21 \\
              -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S10062/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7229ede7-798b-422c-9f0e-d541fff3a36b/runs/d2a349ae-0be7-487b-a9d5-60af052090dd/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/tmp \\
              -Djava.library.path=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-89/linux-x64-debug.test/hotspot/jtreg/native \\
              -Xverify:remote \\
              com.sun.javatest.regtest.agent.MainWrapper /opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S10062/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7229ede7-798b-422c-9f0e-d541fff3a36b/runs/d2a349ae-0be7-487b-a9d5-60af052090dd/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/runtime/classFileParserBug/NameAndTypeSig.d/main.0.jta
      result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Wrong ClassFormatError exception: Method "<init>" in class nonVoidInitSigCFE (an inline class) has illegal signature "()D"


            Assignee:
            Frederic Parain
            Reporter:
            Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: