8328715: [lworld] runtime/classFileParserBug/NameAndTypeSig.java fails with Wrong ClassFormatError exception: Method "<init>" in class nonVoidInitSigCFE (an inline class) has illegal signature "()D"